src/gthnk/static/css/gthnk.css
/* @import url(/static/css/gthnk-attachments.css); */

html {
    height: 100%;
}

body {
    min-height: 100%;
}

  body#day-view {
    background: rgb(230, 230, 230);
}

.navbar {
    padding: .1rem 1rem !important;
}

.image_container img {
    max-height: 600px;
}

.image_container {
    text-align: center;
    margin: 0 auto;
}

#backdrop {
    padding-top: 2em;
    padding-bottom: 2em;
}

.gthnk-card {
    padding: 1em;
    font-family: Consolas, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
}

body.bootstrap .gthnk-card {
    background: white;
    box-shadow: 1px 1px 5px #999;
}

#agenda {
    margin-top: 1em;
}

#agenda li {
    list-style-type: none;
}

a.anchor {
    display: block;
    position: relative;
    top: -60px;
    visibility: hidden;
}

#day-of-week {
    text-align: right;
    font-size: small;
    font-style: italic;
}

/*
    Dark Mode
*/

body.bootstrap-dark#day-view {
    background: rgb(25, 29, 33);
}

body.bootstrap-dark .gthnk-card {
    background: rgb(38, 38, 38);
    /* box-shadow: 1px 1px 5px #333; */
}

/*
    Mobile
*/

@media screen and (max-width: 767px) {
    body {
        font-size: 0.7rem !important;
    }

    h3 {
        font-size: 0.9rem !important;
        font-weight: bold;
    }

    h4 {
        font-size: 0.8rem !important;
        font-weight: bold;
    }
}

